--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/aquavis12/eco-save-calculator/issues"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.6.2",
     "@aws-amplify/ui-react": "^6.5.5",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -33,9 +34,17 @@
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.7.0",
+    "@aws-amplify/backend-cli": "^1.4.2",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "aws-cdk": "^2.167.1",
+    "aws-cdk-lib": "^2.167.1",
+    "constructs": "^10.4.2",
+    "esbuild": "^0.24.0",
     "react-scripts": "^5.0.1",
-    "source-map-loader": "^5.0.0"
+    "source-map-loader": "^5.0.0",
+    "tsx": "^4.19.2",
+    "typescript": "4.9.5"
   },
   "browserslist": {
     "production": [
