--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@react-google-maps/api": "^2.20.3",
     "aws-amplify": "^6.8.2",
     "chart.js": "^4.4.6",
+    "i18next": "^23.16.5",
     "react-chartjs-2": "^5.2.0",
+    "react-i18next": "^15.1.1",
     "react-router-dom": "^6.28.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
