--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "react-scripts build",
+     "build": "react-scripts build && move build dist",
     "start": "react-scripts start"
   },
   "repository": {
