--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@aws-amplify/auth": "^6.6.2",
-    "@aws-amplify/ui-react": "^6.5.5",
+    "@aws-amplify/ui-react": "^6.6.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.7",
@@ -32,7 +32,6 @@
     "dgram": "^1.0.1",
     "domain-browser": "^5.7.0",
     "https-browserify": "^1.0.0",
-    "i18next": "^23.16.5",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "react-chartjs-2": "^5.2.0",
@@ -56,7 +55,7 @@
     "react-scripts": "^5.0.1",
     "source-map-loader": "^5.0.0",
     "tsx": "^4.19.2",
-    "typescript": "4.9.5"
+    "typescript": "^5.0.0"
   },
   "browserslist": {
     "production": [
