--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ backend:
         - npm ci --cache .npm --prefer-offline --force
          # Backend build
         - echo "Starting backend build"
-        - npx exec ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
         # Move amplify_outputs.json to frontend src directory
         - mv amplify_outputs.json src/eco-save-calculator/src/amplify_outputs.json
          # Frontend build
