--- a/amplify.yml
+++ b/amplify.yml
@@ -18,6 +18,7 @@ frontend:
         - export REACT_APP_AWS_ACCESS_KEY_ID=$REACT_APP_AWS_ACCESS_KEY_ID
         - export REACT_APP_AWS_SECRET_ACCESS_KEY=$REACT_APP_AWS_SECRET_ACCESS_KEY
         - export REACT_APP_AWS_REGION=$REACT_APP_AWS_REGION
+        - export GOOGLE_API_KEY=$GOOGLE_API_KEY
         # Run the build command
         - npm run build
   artifacts:
